--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT = 8080
-MONGO_URL = mongodb+srv:// 
+MONGO_URL = mongodb+srv://yyadavprince9:moody@cluster0.edseln0.mongodb.net/?retryWrites=true&w=majority
+JWT="abhishekyadavmoodyapp"
