--- a/understanding/package.json
+++ b/understanding/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
