--- a/understanding/package.json
+++ b/understanding/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
     "firebase": "^10.3.0",
@@ -22,7 +23,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-locomotive-scroll": "^0.2.2",
-    "react-router-dom": "^6.15.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
