--- a/understanding/package.json
+++ b/understanding/package.json
@@ -21,10 +21,11 @@
     "firebase": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-
     "react-icons": "^4.10.1",
     "react-locomotive-scroll": "^0.2.2",
-    "react-router-dom": "^6.15.0"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.15.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
