--- a/understanding/package.json
+++ b/understanding/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@esbuild/win32-ia32": "^0.19.2",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@mui/icons-material": "^5.14.6",
@@ -23,8 +24,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-locomotive-scroll": "^0.2.2",
+    "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
